align header to correct place

--- a/public/css/urbanTemple_main.css
+++ b/public/css/urbanTemple_main.css
@@ -22,6 +22,7 @@
 
 /* login, signup */
 .welcome-title {
+  margin-left:30%;
   color: white;
   font-style: bold;
   font-size: 6em;
